K3s/socchat-backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: socchat-backend
  namespace: socchat
  labels:
    app: socchat-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: socchat-backend
  template:
    metadata:
      labels:
        app: socchat-backend
    spec:
      containers:
        - name: socchat-backend
          image: ghcr.io/soc-chat/socchat-backend:latest
          ports:
            - containerPort: 10001
          resources:
            limits:
              cpu: 400m
              memory: 1G
            requests:
              cpu: 200m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /
              port: 10001
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 10001
            initialDelaySeconds: 30
            periodSeconds: 20
