K3s/socchat-backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: socchat-backend
  namespace: potato
spec:
  selector:
    app: socchat-backend
  ports:
    - port: 80
      targetPort: 10001
  type: ClusterIP
