K3s/socchat-backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: socchat-backend-ingress
  namespace: socchat
spec:
  ingressClassName: "traefik"
  rules:
    - host: socchat-api.mya.ong
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: socchat-backend
                port:
                  number: 80
